Add preamble to quality notebook.

--- a/notebooks/quality.ipynb
+++ b/notebooks/quality.ipynb
@@ -5,6 +5,21 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "# Preamble\n",
+    "\n",
+    "This notebook implements the methods for loading and analysing the data that was used for training the quality classifier.\n",
+    "It also shows how different classifiers were trained, and evaluates their respective outputs.\n",
+    "\n",
+    "This is a protoypical implementation that requires adaptations to run on other datasets.\n",
+    "\n",
+    "Some of the code is licensed under the GPL, and was copied from [nautlius-ocr](https://github.com/natliblux/nautilusocr)."
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "# Initialize"
    ]
   },
